[tool.poetry]
name = "exploratory-analysis"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jmespath = "^0.10.0"
jupyter = "^1.0.0"
ipykernel = "^5.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
rich = "^9.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
